# security-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.petshop  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
charts/security-agent/: Chart.yaml  README.md  values.yaml
data/docs/: incident-response-playbook.md  owasp-top10-guide.md  safeline-admin-guide.md  safeline-api-reference.md
data/eval/: test_cases.json
docs/: agent-observability-runbook.md  k8s-deployment-observability.md  kind-demo-walkthrough.md
docs/plans/: 2026-02-16-guardrails-hardening-implementation-plan.md
k8s/observability/: README.md  otel-collector.yaml  prometheus-rules-agent.yaml
kind/: kind-config.yaml  security-agent-values-kind.yaml
scripts/: demo_dependencies_down.sh  demo_dependencies_up.sh  fix_tengine_wsl.sh  kind_demo_deploy.sh  kind_demo_down.sh  kind_demo_status.sh  kind_demo_up.sh  run_eval.py  safeline.sh
src/security_agent/: __init__.py  config.py  ingest.py  setup_site.py
tests/assistant/: test_actions.py  test_agent_telemetry.py  test_api.py  test_cli_state.py  test_graph_observability.py  test_guardrail_audit.py  test_guardrails_e2e.py  test_guardrails_routing.py  test_observability_config.py  test_selfrag.py
tests/eval/: test_evaluator.py
tests/integration/: test_setup_site_payload.py
tests/smoke/: test_agent_observability_assets.py  test_agent_observability_docs.py  test_demo_dependencies_script.py  test_imports.py  test_kind_assets.py  test_kind_demo_docs.py  test_kind_helm_values.py  test_kind_scripts.py
(+64 files in other folders)
